--- a/WebStore/WebStore.csproj
+++ b/WebStore/WebStore.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+    <PackageReference Include="VisioForge.DotNet.Core.TRIAL" Version="11.4.7" />
+  </ItemGroup>
+
 </Project>
