--- a/WebStore/WebStore.csproj
+++ b/WebStore/WebStore.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="VisioForge.DotNet.Core.TRIAL" Version="11.4.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebStore.Domain\WebStore.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
