--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WebShop_DB;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
