--- a/WebStore.DAL/WebStore.DAL.csproj
+++ b/WebStore.DAL/WebStore.DAL.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200612101007_EmployeeAdded.cs" />
+    <Compile Remove="Migrations\20200612101007_EmployeeAdded.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
